--- a/package.json
+++ b/package.json
@@ -1,7 +1,32 @@
 {
+  "name": "portfolio",
+  "version": "0.0.1",
+  "author": "Marlon Ocampo",
+  "type": "module",
+  "license": "MIT",
+  "scripts": {
+    "start": "vite",
+    "build": "vite build"
+  },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.13.7",
+    "@mui/material": "^5.13.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.1",
+    "typescript": "^5.1.6",
     "vite": "^4.3.9"
+  },
+  "devDependencies": {
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
+    "@vitejs/plugin-react": "^4.0.2",
+    "ts-standard": "^12.0.2"
+  },
+  "eslintConfig": {
+    "extends": "./node_modules/ts-standard/eslintrc.json",
+    "project": "./tsconfig.json"
   }
 }
