--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "license": "MIT",
   "scripts": {
     "start": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "lint": "eslint src/**"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -15,18 +16,29 @@
     "@mui/material": "^5.13.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.1",
-    "typescript": "^5.1.6",
-    "vite": "^4.3.9"
+    "react-router-dom": "^6.14.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@vitejs/plugin-react": "^4.0.2",
-    "ts-standard": "^12.0.2"
+    "ts-standard": "^12.0.2",
+    "typescript": "^5.1.6",
+    "vite": "^4.3.9",
+    "vite-tsconfig-paths": "^4.2.0"
   },
   "eslintConfig": {
     "extends": "./node_modules/ts-standard/eslintrc.json",
-    "project": "./tsconfig.json"
+    "parserOptions": {
+      "project": "./tsconfig.json"
+    },
+    "rules": {
+      "react/jsx-curly-brace-presence": true
+    },
+    "env": {
+      "node": false,
+      "browser": true,
+      "es6": true
+    }
   }
 }
