--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,8 @@
       "src",
       "vite.config.ts",
       "package.json",
-      "tsconfig.json"
+      "tsconfig.json",
+      "postcss.config.js",
+      "tailwind.config.js"
     ]
 }
