--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "autoprefixer": "^10.4.14",
     "daisyui": "^3.2.1",
     "postcss": "^8.4.25",
+    "postcss-nesting": "^12.0.0",
     "ts-standard": "^12.0.2",
     "typescript": "^5.1.6",
     "vite": "^4.3.9",
