--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "target": "es6",
+    "module": "ESNext",
     "outDir": "build",
     "baseUrl": "./",
     "paths": {
