--- a/package.json
+++ b/package.json
@@ -7,23 +7,32 @@
   "scripts": {
     "start": "vite --host",
     "build": "vite build",
-    "lint": "eslint src/**"
+    "lint": "eslint src/**",
+    "testing": "jest"
   },
   "dependencies": {
     "install": "^0.13.0",
+    "jest-environment-jsdom": "^29.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.1.2",
+    "@types/jest": "^29.5.10",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@vitejs/plugin-react": "^4.0.2",
     "autoprefixer": "^10.4.14",
     "daisyui": "^3.2.1",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
     "postcss": "^8.4.25",
     "postcss-nesting": "^12.0.0",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
     "ts-standard": "^12.0.2",
     "typescript": "^5.1.6",
     "vite": "^4.3.9",
