--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "start": "vite --host",
     "build": "vite build",
+    "preview": "vite preview",
     "lint": "eslint src/**",
     "testing": "jest"
   },
