Update deploy.yaml to use "master" branch for deployment

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,7 +1,7 @@
 name: Deploy to Gitub Pages
 on:
   push:
-    branches: [ "CI-Github" ]
+    branches: [ "master" ]
 
 permissions:
   contents: read
