--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint src/**",
-    "testing": "jest"
+    "test": "vitest"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -30,7 +30,8 @@
     "ts-standard": "^12.0.2",
     "typescript": "^5.1.6",
     "vite": "^4.5.3",
-    "vite-tsconfig-paths": "^4.2.0"
+    "vite-tsconfig-paths": "^4.2.0",
+    "vitest": "^1.6.0"
   },
   "eslintConfig": {
     "extends": "./node_modules/ts-standard/eslintrc.json",
