chore: comment out unused path aliases in tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,8 @@
     "baseUrl": "./",
     "types": ["vite/client"],
     "paths": {
-      "@pages/*": ["src/components/pages/*"],
-      "@utils/*": ["src/utils/*"],
+      // "@pages/*": ["src/components/pages/*"],
+      // "@utils/*": ["src/utils/*"],
       "@assets/*": ["src/assets/*"]
     },
     "esModuleInterop": true,
