--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -3,7 +3,10 @@ name: Testing
 on:
   push:
     branches:
-      - feat/MigrationVITEST
+      - master
+  pull_request:
+    branches:
+      - master
 jobs:
   test:
     runs-on: ubuntu-latest
