--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.15.0"
+    "react-router-dom": "^6.15.0",
+    "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
@@ -23,13 +25,13 @@
     "@types/react-dom": "^18.2.6",
     "@vitejs/plugin-react": "^4.0.2",
     "autoprefixer": "^10.4.14",
-    "daisyui": "^3.2.1",
+    "daisyui": "^5.0.43",
     "jsdom": "^24.0.0",
     "postcss": "^8.4.25",
     "postcss-nesting": "^12.0.0",
     "ts-standard": "^12.0.2",
     "typescript": "^5.1.6",
-    "vite": "^4.5.3",
+    "vite": "^7.0.0",
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^1.6.0"
   },
