--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -23,5 +23,8 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Audit fix
+        run: npm audit fix
+
       - name: Run tests
         run: npm run test
